2.0.0 | Initial Ark 2 support